test/arrays/compilerErrors/opCount-int.chpl

var D = {1..2, 1..3};
var A: [D] int;

writeln(A#1);
