test/arrays/compilerErrors/opCount-int.good
opCount-int.chpl:5: error: cannot apply '#' with an integer to multi-dimensional domains and arrays
